进一步兼容